# codex-subagent-engine

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: codex-pooler-canary.md  openlimits-stack.md
examples/: frontend-debug.toml  migration-batch.csv  migration-task.toml  pr-review.toml
openspec/: config.yaml
openspec/changes/archive/2026-07-13-global-codex-subagent-routing/: design.md  tasks.md
openspec/changes/archive/2026-07-13-global-codex-subagent-routing/specs/codex-global-installation/: spec.md
openspec/changes/archive/2026-07-13-global-codex-subagent-routing/specs/codex-subagent-routing/: spec.md
openspec/changes/archive/2026-07-14-codex-pooler-canary/: proposal.md
openspec/changes/archive/2026-07-14-openlimits-dual-harness-routing/: design.md
openspec/changes/archive/2026-07-14-openlimits-dual-harness-routing/evidence/: desktop-handoff.json  global-apply.json  isolated-run-1.json  live-auth-diagnostic.json  live-cli.json  plugin-canary.json
openspec/changes/archive/2026-07-14-openlimits-dual-harness-routing/specs/codex-subagent-routing/: spec.md
openspec/changes/codex-pooler-canary/: design.md  tasks.md
openspec/changes/codex-pooler-canary/specs/codex-pooler-interoperability/: spec.md
openspec/changes/global-codex-subagent-routing/: design.md  proposal.md  tasks.md
openspec/changes/openlimits-dual-harness-routing/: proposal.md  tasks.md
openspec/changes/openlimits-dual-harness-routing/evidence/: billing-decision.json  injected-failure-run.json  live-native-corrected.json  repoprompt-ce-canary.json
openspec/changes/openlimits-dual-harness-routing/specs/dual-harness-global-installation/: spec.md
openspec/changes/openlimits-dual-harness-routing/specs/dual-harness-routing/: spec.md
openspec/changes/openlimits-dual-harness-routing/specs/provider-routing-validation/: spec.md
openspec/specs/codex-global-installation/: spec.md
openspec/specs/codex-pooler-interoperability/: spec.md
openspec/specs/codex-subagent-routing/: spec.md
openspec/specs/dual-harness-global-installation/: spec.md
openspec/specs/dual-harness-routing/: spec.md
openspec/specs/provider-routing-validation/: spec.md
src/: __init__.py  approval.py  batch.py  cli.py  codex_global.py  dual_harness_global.py  dual_harness_validation.py  engine.py  manifest.py  sandbox.py  subagent.py
src/codex_global/: __init__.py
src/codex_global/data/agents/: AGENTS.md
src/templates/codex/: AGENTS.routing.md  config.toml  model-routing.md
src/templates/codex/agents/: AGENTS.md  cse_explorer.toml  cse_implementer.toml  cse_planner.toml  cse_reviewer.toml
src/templates/dual_harness/: CLAUDE.routing.md  claude-openlimits  claude-openlimits-rpce  model-routing.md  policy.json
tests/: test_batch.py  test_cli.py  test_codex_global.py  test_codex_install.py  test_dual_harness_cli.py  test_dual_harness_global.py  test_dual_harness_policy.py  test_dual_harness_validation.py  test_manifest.py
tests/fixtures/: claude_codex_plugin.json
